# rebase-edit-qt

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  app_test.cpp  hello.wren  lib.cpp  lib.hpp  main.cpp  newbase  newbase.bat  panel.cpp  panel.hpp  panel.ui  test-rebase-file.txt  test.cpp  wren_scripted.cpp  wren_scripted.hpp
.github/workflows/: ci.yml
cmake/: qt.cmake  testing.cmake
scripts/: format_json.py  newbase.bat
